chunks/lang/tree-sitter-blimp/test/corpus/pipes.txt
================
Simple pipe
================

actor A do
  reply items |> length(_)
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (reply_statement
      (pipe_expression
        (identifier)
        (function_call
          (identifier)
          (hole))))))

================
Chained pipes
================

actor A do
  reply items |> filter(_, :active) |> length(_)
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (reply_statement
      (pipe_expression
        (pipe_expression
          (identifier)
          (function_call
            (identifier)
            (hole)
            (atom)))
        (function_call
          (identifier)
          (hole))))))

================
Pipe into bare identifier
================

actor A do
  reply items |> sort
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (reply_statement
      (pipe_expression
        (identifier)
        (identifier)))))

================
Pipe with arithmetic on left
================

actor A do
  reply 1 + 2 |> to_string(_)
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (reply_statement
      (pipe_expression
        (binary_expression
          (integer)
          (integer))
        (function_call
          (identifier)
          (hole))))))
