chunks/lang/tree-sitter-blimp/test/corpus/statements.txt
================
Become with single field
================

actor A do
  on :inc do
    become count: count + 1
  end
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (message_handler
      (atom)
      (become_statement
        (key_value_list
          (key_value_pair
            (identifier)
            (binary_expression
              (identifier)
              (integer))))))))

================
Become with multiple fields
================

actor A do
  on :reset do
    become items: [], total: 0
  end
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (message_handler
      (atom)
      (become_statement
        (key_value_list
          (key_value_pair
            (identifier)
            (list))
          (key_value_pair
            (identifier)
            (integer)))))))

================
Reply with expression
================

actor A do
  on :get do
    reply count
  end
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (message_handler
      (atom)
      (reply_statement
        (identifier)))))

================
Assignment
================

actor A do
  on :calc do
    result = 1 + 2
    reply result
  end
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (message_handler
      (atom)
      (assignment
        (identifier)
        (binary_expression
          (integer)
          (integer)))
      (reply_statement
        (identifier)))))

================
Comment
================

# this is a comment
actor A do
end

---

(source_file
  (comment)
  (actor_definition
    (actor_name
      (upper_identifier))))

================
Multiple handlers
================

actor Counter do
  on :increment do
    become count: count + 1
    reply :ok
  end

  on :get do
    reply count
  end
end

---

(source_file
  (actor_definition
    (actor_name
      (upper_identifier))
    (message_handler
      (atom)
      (become_statement
        (key_value_list
          (key_value_pair
            (identifier)
            (binary_expression
              (identifier)
              (integer)))))
      (reply_statement
        (atom)))
    (message_handler
      (atom)
      (reply_statement
        (identifier)))))
